minio-secret.yaml
# Deploys a new Namespace for the MinIO Pod
apiVersion: v1
kind: Namespace
metadata:
  name: ai-demo # Change this value if you want a different namespace name
  labels:
    name: minio-dev # Change this value to match metadata.name
