upload-minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-minio
  namespace: ai-demo
  labels:
    app: upload-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-minio
  template:
    metadata:
      name: upload-minio
      labels:
        app: upload-minio
    spec:
      volumes:
        - name:  storage-minio
          hostPath:
            path: /storage/
            type: DirectoryOrCreate
      containers:
        - args:
            - python
            - build_minIO_bucket.py
          name: upload-minio
          image: amineschercloud/minio-upload
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: "/home/storage"
              name: storage-minio
