controlnet-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controlnet
  namespace: ai-demo
  labels:
    app: controlnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controlnet
  template:
    metadata:
      name: controlnet
      labels:
        app: controlnet
    spec:
      imagePullSecrets:
            - name: ghcr-secret
      containers:
        - args:
            - conda
            - run
            - --no-capture-output
            - -n
            - ldm
            - python
            - backend.py
          name: controlnet
          image: ghcr.io/amnescher/controlnet:latest
          resources:
            limits:
              nvidia.com/gpu: 1
          ports:
            - containerPort: 8507
            - containerPort: 9000
          
      restartPolicy: Always  
---

apiVersion: v1
kind: Service
metadata:
  name: controlnet-service
  namespace: ai-demo
spec:
  ports:
    - name: "8507"
      port: 8507
      targetPort: 8507
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    app: controlnet
status:
  loadBalancer: {}
