ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deployment
  namespace: ai-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target:  /
    nginx.org/websocket-services: "frontend" # Configuration for open websockets (comma separated services)
spec:
  rules:
       - host: app.185.47.227.175.nip.io # Url where curl it's received (ELB or Domain linked to ELB)
         http:
          paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 8501
